fix(pallete-aside): assigns correct direction and text-alignment

--- a/app/components/tool-pallete/toolpallete.element.css
+++ b/app/components/tool-pallete/toolpallete.element.css
@@ -57,6 +57,8 @@
   & > aside {
     overflow: hidden;
     position: absolute;
+    direction: ltr;
+    text-align: left;
     left: 3em;
     top: 0;
     z-index: -2;
